Admin UI title fix

--- a/registry/client/src/index.html
+++ b/registry/client/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>React Admin</title>
+    <title>ILC Registry</title>
     <style>
         body {
             margin: 0;
