--- a/registry/client/src/index.html
+++ b/registry/client/src/index.html
@@ -10,11 +10,11 @@
     </style>
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
 
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/icon/favicon-16x16.png">
-    <link rel="manifest" href="/img/icon/site.webmanifest">
-    <link rel="mask-icon" href="/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="120x120" href="./img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon-16x16.png">
+    <link rel="manifest" href="./img/icon/site.webmanifest">
+    <link rel="mask-icon" href="./img/icon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
